# liborkh

./: CMakeLists.txt  README.md
include/: liborkh.h  liborkh_clang_offload_bundler.h  liborkh_clang_offload_packager.h  liborkh_elf_utils.h  liborkh_gpu_elf_pool.h  liborkh_io.h  liborkh_kernel_metadata.h  liborkh_log.h  liborkh_uncompress.h  liborkh_utils.h
lua/: CMakeLists.txt  liborkh_lua.c
src/: liborkh.c  liborkh_clang_offload_bundler.c  liborkh_clang_offload_packager.c  liborkh_elf_utils.c  liborkh_gpu_elf_pool.c  liborkh_io.c  liborkh_kernel_metadata.c  liborkh_log.c
tests/: main_extract_gpu_elf.c  main_extract_gpu_fatbin.c  main_print_nb_kernel.c  main_print_total_nb_kernels.c  test_liborkh.lua
